--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "topguns-stream-overlay",
+  "name": "cricket-scorecard-overlay",
   "version": "1.0.0",
   "description": "A professional, lightweight cricket scorecard overlay designed for live streaming. This overlay fetches real-time data from CricClubs or can be used with mock data for testing.",
   "main": "index.js",
@@ -12,15 +12,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/abhinav91690/topguns-stream-overlay.git"
+    "url": "git+https://github.com/abhinav91690/cricket-scorecard-overlay.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/abhinav91690/topguns-stream-overlay/issues"
+    "url": "https://github.com/abhinav91690/cricket-scorecard-overlay/issues"
   },
-  "homepage": "https://github.com/abhinav91690/topguns-stream-overlay#readme",
+  "homepage": "https://github.com/abhinav91690/cricket-scorecard-overlay#readme",
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
     "@types/node": "^25.0.3",
